@@ -1,0 +1,303 @@
+; Joomla! Project
+; Copyright (C) 2005 - 2013 Open Source Matters. All rights reserved.
+; License GNU General Public License version 2 or later; see LICENSE.txt
+; Note : All ini files need to be saved as UTF-8
+
+
+
+;Stepbar
+INSTL_STEP_COMPLETE_LABEL="Dokončení"
+INSTL_STEP_DATABASE_LABEL="Databáze"
+INSTL_STEP_DEFAULTLANGUAGE_LABEL="Vyberte výchozí jazyk"
+INSTL_STEP_FTP_LABEL="FTP"
+INSTL_STEP_LANGUAGE_LABEL="Jazyk"
+INSTL_STEP_LANGUAGES_LABEL="Instalace jazyků"
+INSTL_STEP_LICENSE_LABEL="Licence"
+INSTL_STEP_PREINSTALL_LABEL="Kontrola před instalací"
+INSTL_STEP_SITE_LABEL="Nastavení"
+INSTL_STEP_SUMMARY_LABEL="Souhrn"
+INSTL_STEPS_TITLE="Kroky"
+
+;Language view
+INSTL_SELECT_LANGUAGE_TITLE="Zvolte jazyk"
+INSTL_SELECT_LANGUAGE_DESC="Zvolte si jazyk, použitý při instalaci Joomla!:"
+INSTL_LANGUAGE_TITLE="Vybrat jazyk"
+INSTL_WARNJAVASCRIPT="Upozornění! Ke správnému průběhu instalace Joomla! je potřeba mít povolen JavaScript!"
+INSTL_WARNJSON="Aby mohla být Joomla! nainstalována, je třeba mít v PHP povolen JSON!"
+
+;Preinstall view
+INSTL_PRECHECK_TITLE="Kontrola před instalací"
+INSTL_PRECHECK_FOR_VERSION="Kontrola před instalací pro %s:"
+INSTL_PRECHECK_DESC="Není-li některá z uvedených položek podporována (je označena <strong class="_QQ_"red"_QQ_">Ne</strong>), potom prosím proveďte kroky k nápravě. Pokud tak neučiníte, může to vést k tomu, že po instalaci nebude Joomla! správně fungovat."
+INSTL_PRECHECK_RECOMMENDED_SETTINGS_TITLE="Doporučená nastavení:"
+INSTL_PRECHECK_RECOMMENDED_SETTINGS_DESC="Tato nastavení PHP jsou doporučena pro zajištění plné kompatibility s Joomlou.<br />Nicméně i při drobných odchylkách od doporučeného nastavení bude Joomla! stále fungovat."
+INSTL_PRECHECK_DIRECTIVE="Direktiva"
+INSTL_PRECHECK_RECOMMENDED="Doporučena"
+INSTL_PRECHECK_ACTUAL="Současná"
+
+; Database view
+INSTL_DATABASE="Nastavení databáze"
+INSTL_DATABASE_HOST_DESC="Obvykle &quot;localhost&quot;"
+INSTL_DATABASE_HOST_LABEL="Název hostitele"
+INSTL_DATABASE_NAME_DESC="Někteří poskytovatelé hostingu umožňují mít pouze jednu databázi. V takovém případě použijte k odlišení jednotlivých Joomla! webů předponu tabulek."
+INSTL_DATABASE_NAME_LABEL="Název databáze"
+INSTL_DATABASE_NO_SCHEMA="Pro tento typ databáze neexistuje schéma."
+INSTL_DATABASE_OLD_PROCESS_DESC="Jakékoliv existující záložní tabulky z předchozích instalací Joomla! budou nahrazeny"
+INSTL_DATABASE_OLD_PROCESS_LABEL="Nakládání se starou databází"
+INSTL_DATABASE_PASSWORD_DESC="Z důvodu zabezpečení webu je nutné používat heslo k mysql účtu"
+INSTL_DATABASE_PASSWORD_LABEL="Heslo"
+INSTL_DATABASE_PREFIX_DESC="Zvolte si předponu tabulek nebo použijte <b>náhodně vygenerovanou</b>. Ideální předpona je dlouhá tři nebo čtyři znaky, obsahuje pouze alfanumerické znaky, a MUSÍ končit podtržítkem. <b>Ujistěte se, že zvolenou předponu nepoužívají jiné tabulky."
+INSTL_DATABASE_PREFIX_LABEL="Předpona tabulek"
+INSTL_DATABASE_PREFIX_MSG="Předpona tabulek musí začínat písmenem, následovaným volitelnými alfanumerickými znaky a podtržítkem"
+INSTL_DATABASE_TYPE_DESC="Obvykle je to &quot;MySQLi&quot;"
+INSTL_DATABASE_TYPE_LABEL="Typ databáze"
+INSTL_DATABASE_USER_DESC="Buď něco jako "_QQ_"root"_QQ_" nebo uživatelské jméno přidělené provozovatelem hostingu"
+INSTL_DATABASE_USER_LABEL="Uživatelské jméno"
+INSTL_DATABASE_TITLE="Nastavení připojení"
+INSTL_DATABASE_DESC="<p>Web Joomla! uchovává veškerá svá data v databázi. Tato obrazovka předá instalačnímu programu potřebné informace k vytvoření této databáze.</p><p> Instalujete-li Joomlu! na vzdálený webový server, budete muset tyto informace získat od svého poskytovatele hostingu.</p><p>Některé webhostingy vyžadují, abyste databázi vytvořili před instalací Joomla. Obdržíte-li chybovou hlášku "_QQ_"Nelze se připojit k databázi"_QQ_", zkontrolujte, že je správně zadáno uživatelské jméno a heslo. Pokud i přesto obdržíte toto hlášení o chybě, prověřte u svého poskytovatele hostingu, zda před instalací Joomla nebude nutné vytvořit databázi.</p>"
+
+;FTP view
+INSTL_AUTOFIND_FTP_PATH="Automaticky najít cestu na FTP serveru"
+INSTL_FTP="Nastavení FTP"
+INSTL_FTP_DESC="<p>Na některých serverech budete muset pro dokončení instalace zadat přihlašovací údaje k FTP. Pokud máte problémy s instalací bez těchto údajů, zjistěte si u svého provozovatele hostingu, zda je to nutné. </p><p>Z bezpečnostních důvodů je nejlepší vytvořit samostatný FTP účet s přístupem k instalaci Joomla! a nikoliv k celému webovému serveru. Pomoci by vám s tím měl provozovatel hostingu.</p><p><b>Poznámka:</b> Pokud instalujete na operační systém Windows, FTP vrstva <strong>není</strong> vyžadována.</p>"
+INSTL_FTP_ENABLE_LABEL="Povolit FTP vrstvu"
+INSTL_FTP_HOST_LABEL="FTP Hostitel"
+INSTL_FTP_PASSWORD_LABEL="Heslo k FTP"
+INSTL_FTP_PORT_LABEL="FTP Port"
+INSTL_FTP_ROOT_LABEL="Cesta ke kořenové složce na FTP serveru"
+INSTL_FTP_SAVE_LABEL="Uložit FTP heslo"
+INSTL_FTP_TITLE="Nastavení FTP (<strong class="_QQ_"red"_QQ_">Nepovinné - Většina uživatelů může tento krok přeskočit - Pro přeskočení klikněte na Následující</strong>)"
+INSTL_FTP_USER_LABEL="Uživatelské jméno pro FTP"
+INSTL_SITE_NAME_LABEL="Název webu"
+INSTL_VERIFY_FTP_SETTINGS="Ověřit nastavení FTP"
+INSTL_FTP_SETTINGS_CORRECT="Nastavení je v pořádku"
+INSTL_FTP_USER_DESC="Upozornění! Doporučuje se ponechat toto pole prázdné a uživatelské jméno zadávat při každém přenosu souborů."
+INSTL_FTP_PASSWORD_DESC="Upozornění! Doporučuje se ponechat toto pole prázdné a heslo zadávat při každém přenosu souborů."
+
+;Site View
+INSTL_SITE="Základní nastavení"
+INSTL_ADMIN_EMAIL_LABEL="E-mail"
+INSTL_ADMIN_EMAIL_DESC="Uveďte e-mailovou adresu. Tato adresa bude použita jako e-mailová adresa super správce stránek."
+INSTL_ADMIN_PASSWORD_LABEL="Heslo správce"
+INSTL_ADMIN_PASSWORD_DESC="Uveďte heslo pro super správce a potvrďte jej opakovaným zadáním do pole níže."
+INSTL_ADMIN_PASSWORD2_LABEL="Ověření hesla správce"
+INSTL_ADMIN_USER_LABEL="Uživatelské jméno správce"
+INSTL_ADMIN_USER_DESC="Můžete změnit předvolené uživatelské jméno <strong>admin</strong>."
+INSTL_SITE_NAME_TITLE="Název webu"
+INSTL_SITE_NAME_DESC="Zadejte název svého Joomla! webu."
+INSTL_SITE_METADESC_LABEL="Popis"
+INSTL_SITE_METADESC_TITLE_LABEL="Zadejte celkový popis webu, který budou používat vyhledávače. Obecně platí, že je optimální zadat maximálně 20 slov."
+INSTL_SITE_OFFLINE_LABEL="Web není dostupný"
+INSTL_SITE_OFFLINE_TITLE_LABEL="Když je instalace dokončena, uživatelská část webu se nastaví jako nedostupná. Web lze později opět zpřístupnit v Globálním nastavení."
+INSTL_SITE_INSTALL_SAMPLE_LABEL="Nahrát ukázková data"
+INSTL_SITE_INSTALL_SAMPLE_DESC="Začátečníkům se instalace ukázkových dat důrazně doporučuje. Nainstaluje se ukázkový obsah, který je obsažen v instalačním balíčku Joomla!."
+INSTL_SITE_INSTALL_SAMPLE_NONE="Žádná"
+INSTL_SAMPLE_BLOG_SET="Sada ukázkových dat - Blog (GB)"
+INSTL_SAMPLE_BROCHURE_SET="Sada ukázkových data - Reklamní brožurka (GB)"
+INSTL_SAMPLE_DATA_SET="Výchozí anglická ukázková data"
+INSTL_SAMPLE_LEARN_SET="Sada ukázkových dat - Learn Joomla English (GB)"
+INSTL_SAMPLE_TESTING_SET="Sada ukázkových dat - Test English (GB)"
+
+;Summary view
+INSTL_FINALISATION="Finalizace"
+INSTL_SUMMARY_INSTALL="Instalovat"
+INSTL_SUMMARY_EMAIL_LABEL="Nastavení e-mailu"
+INSTL_SUMMARY_EMAIL_DESC="Odeslat po instalaci e-mailem nastavení na %s."
+INSTL_SUMMARY_EMAIL_PASSWORDS_LABEL="Uvést v e-mailu i heslo"
+INSTL_SUMMARY_EMAIL_PASSWORDS_DESC="Pozor! Posílat heslo v e-mailu není doporučeno."
+
+;Installing view
+INSTL_INSTALLING="Probíhá instalace..."
+INSTL_INSTALLING_DATABASE_BACKUP="Zálohování starých databázových tabulek"
+INSTL_INSTALLING_DATABASE_REMOVE="Odstraňování starých databázových tabulek"
+INSTL_INSTALLING_DATABASE="Tvorba databázových tabulek"
+INSTL_INSTALLING_SAMPLE="Instalace vzorových dat"
+INSTL_INSTALLING_CONFIG="Tvorba souboru konfigurace"
+INSTL_INSTALLING_EMAIL="Odesílání e-mailu na %s"
+
+;Email
+INSTL_EMAIL_SUBJECT="Detaily konfigurace: %s"
+INSTL_EMAIL_HEADING="Na této stránce naleznete nastavení konfigurace nových Joomla! webových stránek."
+INSTL_EMAIL_NOT_SENT="E-mail se nepodařilo odeslat."
+
+;Complete view
+INSTL_COMPLETE="Dokončení"
+INSTL_COMPLETE_ADMINISTRATION_LOGIN_DETAILS="Přihlašovací údaje správce"
+INSTL_COMPLETE_DESC1="Klikněte na tlačítko Web a podívejte se na svůj Joomla! web, nebo klikněte na tlačítko Správa, které vás přenese na přihlášení správce."
+INSTL_COMPLETE_DESC2="Na webu Joomla! komunity najdete seznam odkazů na existující jazykové balíčky stejně jako odkazy na zdroje spojené s jazyky z rodiny webu joomla.org."
+INSTL_COMPLETE_DESC3="Kliknutím na tlačítko vpravo se v novém okně otevře komunitní web."
+INSTL_COMPLETE_ERROR_FOLDER_ALREADY_REMOVED="Instalační složka již byla vymazána"
+INSTL_COMPLETE_ERROR_FOLDER_DELETE="Instalační složka nemohla být vymazána. Smažte složku ručně."
+INSTL_COMPLETE_FOLDER_REMOVED="Instalační složka byla úspěšně vymazána"
+INSTL_COMPLETE_LANGUAGE_1="Joomla! ve vašem jazyce?"
+INSTL_COMPLETE_LANGUAGE_DESC="Před odstraněním instalační složky můžete nainstalovat další jazyky. Pokud tedy chcete do vaší Joomla! doplnit další jazyky, klikněte na následující tlačítko."
+INSTL_COMPLETE_LANGUAGE_DESC2="Poznámka: pro možnost stažení a instalace dalších jazyků do vaší Joomla! instalace je potřeba připojení na internet. <br/>Některé konfigurace serverů přidání dalších jazyků v průběhu instalace Joomla! neumožňují. Pokud je to i váš případ, nemějte obavy, budete je moci pod dokončení instalace nainstalovat z administrace Joomla!."
+INSTL_COMPLETE_REMOVE_FOLDER="Odstraňte instalační složku"
+INSTL_COMPLETE_REMOVE_INSTALLATION="NEZAPOMEŇTE PROSÍM ÚPLNĚ ODSTRANIT INSTALAČNÍ SLOŽKU.<br />Nebudete moci dále pokračovat, než bude složka odstraněna. Toto je bezpečnostní funkce Joomla!."
+INSTL_COMPLETE_TITLE="Gratulujeme! Joomla! je nainstalována."
+INSTL_COMPLETE_INSTALL_LANGUAGES="Další kroky: Instalace jazyků"
+
+;Languages view
+INSTL_LANGUAGES="Instalace jazykových balíčků"
+INSTL_LANGUAGES_COLUMN_HEADER_LANGUAGE="Jazyk"
+INSTL_LANGUAGES_COLUMN_HEADER_VERSION="Verze"
+INSTL_LANGUAGES_DESC="Rozhraní Joomla je dostupné v mnoha různých jazycích. Kliknutím na zaškrtávací políčko vyberte požadovaný jazyk a nainstalujte jej kliknutím na tlačítko 'Následující'.<br/>Poznámka: Tato činnost, stažení a instalace každého jazyku, může trvat okolo pěti vteřin. Aby se tedy zabránilo překročení časového limitu zpracování požadavku, nevybírejte pro instalaci více jak tři jazyky."
+INSTL_LANGUAGES_MESSAGE_PLEASE_WAIT="Tato činnost bude u každého jazyku trvat asi 10 vteřin<br />Počkejte prosím, než se jazyky stáhnou a nainstalují..."
+INSTL_LANGUAGES_NO_LANGUAGE_SELECTED="Vyberte prosím jazyk. Pokud nechcete další jazyky instalovat, klikněte na tlačítko 'Předchozí'"
+INSTL_LANGUAGES_WARNING_NO_INTERNET="Joomla! není schopna se připojit k serveru jazyků. Prosím, dokončete proces instalace."
+INSTL_LANGUAGES_WARNING_NO_INTERNET2="Poznámka: Jazyky budete moci později nainstalovat z administrace Joomla!"
+INSTL_LANGUAGES_WARNING_BACK_BUTTON="Zpět k poslednímu kroku instalace"
+
+;Defaultlanguage view
+INSTL_DEFAULTLANGUAGE_ADMINISTRATOR="Výchozí jazyk správy stránek"
+INSTL_DEFAULTLANGUAGE_ADMIN_COULDNT_SET_DEFAULT="Joomla nebyla schopna tento jazyk nastavit jako výchozí. Jako výchozí jazyk správy stránek bude použita angličtina."
+INSTL_DEFAULTLANGUAGE_ADMIN_SET_DEFAULT="Joomla nastavila %s jako výchozí jazyk správy stránek."
+INSTL_DEFAULTLANGUAGE_COLUMN_HEADER_SELECT="Vybrat"
+INSTL_DEFAULTLANGUAGE_COLUMN_HEADER_LANGUAGE="Jazyk"
+INSTL_DEFAULTLANGUAGE_COLUMN_HEADER_TAG="Štítek"
+INSTL_DEFAULTLANGUAGE_COULD_NOT_INSTALL_LANGUAGE="Joomla nebyla schopna nainstalovat jazyk %s."
+INSTL_DEFAULTLANGUAGE_DESC="Joomla nainstalovala následující jazyky. Vyberte prosím jazyk požadovaný pro správu stránek a klikněte na tlačítko 'Další'."
+INSTL_DEFAULTLANGUAGE_DESC_FRONTEND="Joomla nainstalovala následující jazyky. Vyberte prosím jazyk požadovaný pro veřejnou část stránek a klikněte na tlačítko 'Další'."
+INSTL_DEFAULTLANGUAGE_FRONTEND="Výchozí jazyk stránek"
+INSTL_DEFAULTLANGUAGE_FRONTEND_COULDNT_SET_DEFAULT="Joomla nebyla schopna tento jazyk nastavit jako výchozí. Jako výchozí jazyk veřejné části stránek bude použita angličtina."
+INSTL_DEFAULTLANGUAGE_FRONTEND_SET_DEFAULT="Joomla nastavila %s jako výchozí jazyk veřejné části stránek."
+INSTL_DEFAULTLANGUAGE_NOTE="Poznámka: po kliknutí na tlačítko 'Další'přejdete na konec procesu instalace, kde budete vyzváni k odstranění instalační složky."
+INSTL_DEFAULTLANGUAGE_TABLE_HEADER="Vyberte váš výchozí jazyk"
+INSTL_DEFAULTLANGUAGE_TRY_LATER="Budete jej moci později nainstalovat z administrace Joomla!"
+
+;Database Model
+INSTL_DATABASE_COULD_NOT_CONNECT="Nemohu se připojit k databázi. Připojení vrátilo následující chybu: %s"
+INSTL_DATABASE_COULD_NOT_REFRESH_MANIFEST_CACHE="Nemohu obnovit manifest cache pro rozšíření: %s"
+INSTL_DATABASE_EMPTY_NAME=""
+INSTL_DATABASE_ERROR_BACKINGUP="Při zálohování databáze se vyskytly chyby."
+INSTL_DATABASE_ERROR_CREATE="Při vytváření databáze se objevila chyba %s.<br />Uživatel patrně nemá dostatečná práva k vytvoření databáze. Požadovaná databáze by měla být vytvořena zvlášť a před instalací Joomla!."
+INSTL_DATABASE_ERROR_DELETE="Při mazání databáze se objevily chyby."
+INSTL_DATABASE_ERROR_INITIALISE_SCHEMA="Chyba při inicializaci čísla verze schématu"
+INSTL_DATABASE_FIELD_VALUE_REMOVE="Odstranit"
+INSTL_DATABASE_FIELD_VALUE_BACKUP="Záloha"
+INSTL_DATABASE_FIX_TOO_LONG="Prefix MySQL tabulky může být dlouhý nejvýše 15 znaků."
+INSTL_DATABASE_INVALID_DB_DETAILS="Zadané informace o databázi jsou nesprávné nebo prázdné."
+INSTL_DATABASE_INVALID_MYSQL_VERSION="K instalaci potřebujete MySQL 5.0.4 nebo vyšší. Vaše verze je: %s"
+INSTL_DATABASE_INVALID_MYSQLI_VERSION="K instalaci potřebujete MySQL 5.0.4 nebo vyšší. Vaše verze je: %s"
+INSTL_DATABASE_INVALID_SQLSRV_VERSION="K instalaci potřebujete SQL Server 2008 R2 (10.50.1600.1) nebo vyšší. Vaše verze je: %s"
+INSTL_DATABASE_INVALID_SQLZURE_VERSION="K instalaci potřebujete SQL Server 2008 R2 (10.50.1600.1) nebo vyšší. Vaše verze je: %s"
+INSTL_DATABASE_INVALID_TYPE="Zvolte typ databáze"
+INSTL_DATABASE_NAME_TOO_LONG="Jméno MySQL databáze může obsahovat nejvýše 64 znaky."
+INSTL_DATABASE_PREFIX_INVALID_CHARS="Prefix MySQL tabulky musí začínat písmenem a pak může následovat znak, číslo nebo podtržítko."
+INSTL_DATABASE_INVALID_NAME="Databáze MySQL verze starší než 5.1.6 nemohou v názvu obsahovat dvojtečky nebo jiné znaky typu "_QQ_"special"_QQ_". Současná verze je: %s"
+INSTL_DATABASE_NAME_INVALID_SPACES="Jméno databáze MySQL nebo jména tabulek nemohou začínat nebo končit mezerou."
+INSTL_DATABASE_NAME_INVALID_CHAR="Žádný MySQL identifikátor nemůže obsahovat NUL ASCII(0x00)."
+INSTL_DATABASE_FILE_DOES_NOT_EXIST="Soubor %s neexistuje"
+
+;controllers
+INSTL_COOKIES_NOT_ENABLED="Zdá se, že váš prohlížeč nepodporuje cookies. Aplikaci nebude bez této funkce možné nainstalovat. Může zde také být problém se serverovou proměnnou <strong>session.save_path</strong>. Pokud je to váš případ, kontaktujte zprostředkovatele hostingu pokud nevíte, jak to zajistit nebo opravit svépomocí."
+INSTL_HEADER_ERROR="Chyba"
+
+;Helpers
+INSTL_PAGE_TITLE="Instalační program Joomla!"
+
+;Configuration model
+INSTL_ERROR_CONNECT_DB="Nemohu se připojit k databázi. Byla vrácena chyba číslo: %s"
+INSTL_STD_OFFLINE_MSG="Tento web je právě v údržbě.<br /> Zkuste to prosím později."
+
+;FTP model
+INSTL_FTP_INVALIDROOT="Zadaná FTP složka není složka této Joomla! instalace"
+INSTL_FTP_NOCONNECT="Nemohu se připojit na FTP server"
+INSTL_FTP_NODELE="Funkce "_QQ_"DELE"_QQ_" selhala."
+INSTL_FTP_NODIRECTORYLISTING="Nemohu získat seznam složek z FTP serveru."
+INSTL_FTP_NOLIST="Funkce "_QQ_"LIST"_QQ_" selhala."
+INSTL_FTP_NOLOGIN="Nemohu se přihlásit na FTP server."
+INSTL_FTP_NOMKD="Funkce "_QQ_"MKD"_QQ_" selhala."
+INSTL_FTP_NONLST="Funkce "_QQ_"NLST"_QQ_" selhala."
+INSTL_FTP_NOPWD="Funkce "_QQ_"PWD"_QQ_" selhala."
+INSTL_FTP_NORETR="Funkce "_QQ_"RETR"_QQ_" selhala."
+INSTL_FTP_NORMD="Funkce "_QQ_"RMD"_QQ_" selhala."
+INSTL_FTP_NOROOT="Nemohu získat přístup k zadané FTP složce."
+INSTL_FTP_NOSTOR="Funkce "_QQ_"STOR"_QQ_" selhala."
+INSTL_FTP_NOSYST="Funkce "_QQ_"SYST"_QQ_" selhala."
+INSTL_FTP_UNABLE_DETECT_ROOT_FOLDER="Nemohu detekovat kořenovou složku FTP."
+
+;others
+INSTL_ADVANCED_SETTINGS="Pokročilé nastavení"
+INSTL_BASIC_SETTINGS="Základní nastavení"
+INSTL_CONFPROBLEM="Do souboru s konfigurací či do složky nelze zapisovat nebo se objevil problém při vytváření konfiguračního souboru. Následující kód musíte proto nahrát ručně. Klikněte do textové oblasti pro vybrání kompletního kódu, který vložte do nového textového souboru. Přejmenujte jej na 'configuration.php' a nahrajte jej do kořenové složky vašich stránek."
+INSTL_DATABASE_SUPPORT="Podpora databáze:"
+INSTL_DISPLAY_ERRORS="Zobrazit chyby"
+INSTL_ERROR_DB="Při práci s databází se vyskytly chyby: %s"
+INSTL_ERROR_INITIALISE_SCHEMA="Nelze inicializovat schéma databáze"
+INSTL_FILE_UPLOADS="Nahrávání souborů"
+INSTL_GNU_GPL_LICENSE="Licence GNU General Public License"
+INSTL_INSTALLATION="Instalace"
+INSTL_JSON_SUPPORT_AVAILABLE="Podpora JSON"
+INSTL_LICENSE="Licence"
+INSTL_MAGIC_QUOTES_GPC="Magic Quotes GPC vypnuto"
+INSTL_MAGIC_QUOTES_RUNTIME="Magic Quotes Runtime"
+INSTL_MB_LANGUAGE_IS_DEFAULT="MB Language je Výchozí"
+INSTL_MB_STRING_OVERLOAD_OFF="MB String Overload vypnuto"
+INSTL_NOTICEMBLANGNOTDEFAULT="Proměnná PHP mbstring language není nastavena na hodnotu neutral. Můžete to změnit zadáním hodnoty <strong>php_value mbstring.language neutral</strong> do souboru <code>.htaccess</code>."
+INSTL_NOTICEMBSTRINGOVERLOAD="Je zapnuta funkce PHP mbstring. Lokálně ji můžete vypnout zadáním  hodnoty <strong>php_value mbstring.func_overload 0</strong> do souboru <code>.htaccess</code>."
+INSTL_NOTICEYOUCANSTILLINSTALL="<br />I tak můžete pokračovat v instalaci, protože na konci bude konfigurační soubor vypsán. Ručně jej pak musíte uložit do kódu. Klikněte do textové oblasti pro vybrání kompletního kódu, který vložte do nového textového souboru. Přejmenujte jej na 'configuration.php' a nahrajte jej do kořenové složky vašich stránek."
+INSTL_OUTPUT_BUFFERING="Ukládání výstupu"
+INSTL_PARSE_INI_FILE_AVAILABLE="Podpora INI Parseru"
+INSTL_PHP_VERSION="Verze PHP"
+INSTL_REGISTER_GLOBALS="Register Globals"
+INSTL_SAFE_MODE="Safe Mode"
+INSTL_SESSION_AUTO_START="Auto Start sezení"
+INSTL_WRITABLE="Zapisovatelné"
+INSTL_XML_SUPPORT="Podpora XML"
+INSTL_ZIP_SUPPORT_AVAILABLE="Nativní podpora ZIP komprese"
+INSTL_ZLIB_COMPRESSION_SUPPORT="Podpora Zlib komprese"
+INSTL_PROCESS_BUSY="Probíhá zpracování. Počkejte prosím..."
+
+;Global strings
+JADMINISTRATOR="Správce"
+JADVANCED="Pokročilý"
+JCHECK_AGAIN="Zkontrolovat znovu"
+JERROR="Chyba"
+JEMAIL="E-mail"
+JGLOBAL_ISFREESOFTWARE="%s je svobodný software šířený pod <a href="_QQ_"http://www.gnu.org/licenses/gpl-2.0.html"_QQ_">licencí GNU General Public License</a>."
+JGLOBAL_LANGUAGE_VERSION_NOT_PLATFORM="Jazykový balíček neodpovídá této verzi Joomla!, některé řetězce mohou scházet."
+JGLOBAL_SELECT_AN_OPTION="Vyberte možnost"
+JGLOBAL_SELECT_NO_RESULTS_MATCH="Nejsou dostupné odpovídající výsledky"
+JGLOBAL_SELECT_SOME_OPTIONS="Vyberte nějaké možnosti"
+JINVALID_TOKEN="Nejnovější požadavek byl odmítnut, protože obsahuje neplatný bezpečnostní symbol. Obnovte stránku a zkuste to znovu."
+JNEXT="Následující"
+JNO="Ne"
+JNOTICE="Poznámka"
+JOFF="Vypnuto"
+JON="Zapnuto"
+JPREVIOUS="Předchozí"
+JSITE="Web"
+JUSERNAME="Uživatelské jméno"
+JYES="Ano"
+
+; Framework strings necessary when no lang pack is available
+JLIB_DATABASE_ERROR_DATABASE="Došlo k chybě databáze."
+JLIB_DATABASE_ERROR_CONNECT_MYSQL="Nemohu se připojit k MySQL."
+JLIB_DATABASE_ERROR_LOAD_DATABASE_DRIVER="Nelze nahrát databázový ovladač: %s"
+JLIB_ENVIRONMENT_SESSION_EXPIRED="Vaše sezení vypršelo, obnovte stránku."
+JLIB_FILESYSTEM_ERROR_PATH_IS_NOT_A_FOLDER_FILES="JFolder: :files: Cesta není složka. Cesta: %s"
+JLIB_FORM_FIELD_INVALID="Neplatné pole:&#160;"
+JLIB_FORM_VALIDATE_FIELD_INVALID="Neplatné pole: %s"
+JLIB_FORM_VALIDATE_FIELD_REQUIRED="Povinné pole: %s"
+JLIB_UTIL_ERROR_CONNECT_DATABASE="JDatabase: :getInstance: Nelze se připojit k databázi <br />joomla.library: %1$s - %2$s"
+
+; Strings for the language debugger
+JDEBUG_LANGUAGE_FILES_IN_ERROR="Analýze chyb v jazykových souborech"
+JDEBUG_LANGUAGE_UNTRANSLATED_STRING="Nepřeložené řetězce"
+JNONE="Žádný"
+
+;Necessary for errors
+ADMIN_EMAIL="E-mail"
+ADMIN_PASSWORD="Heslo správce"
+ADMIN_PASSWORD2="Znovu zadejte heslo správce"
+SITE_NAME="Název webu"
+
+; Database types (allows for a more descriptive label than the internal name)
+MYSQL="MySQL"
+MYSQLI="MySQLi"
+ORACLE="Oracle"
+POSTGRESQL="PostgreSQL"
+SQLAZURE="Microsoft SQL Azure"
+SQLITE="SQLite"
+SQLSRV="Microsoft SQL Server"
